--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,7 +2,7 @@
     "version": "0.1.0",
     "command": "Chrome",
     "windows": {
-        "command": "C:\\Users\\Abhishek\\AppData\\Local\\Google\\Chrome\\Application\\chrome.exe"
+        "command": "C:\\Program Files (x86)\\Google\\Chrome\\Application\\chrome.exe"
     },
     "args": ["${file}"]
 }
